--- a/src/app/app-header-mobile/home-mobile/home-mobile.component.css
+++ b/src/app/app-header-mobile/home-mobile/home-mobile.component.css
@@ -115,7 +115,7 @@
   text-align: left;
   margin-top: 10px;
   font-family: Regular;
-  font-size: 20px;
+  font-size: 18px;
   color: #5d5d5d;
 }
 .read {
